Mon Aug 28 19:33:50 UTC 2006  Sumant Tambe  <sutambe@nospam>

        A quick perl script to create a change-log-entry date and time.
        * bin/cltime.pl:

        Added *.cidl *.pcd *.cdd
        * docs/svn/config:
        * docs/svn/svn-prefs.reg:

Mon Aug 28 14:14:39 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * bin/tao_other_tests.lst:
          Added TAO/orbsvcs/tests/Security/Big_Request/run_test.pl to the
          list of SSL-based tests. Thanks to Johnny Willemsen
          <jwillemsen@remedy.nl> for pointig out that it was missing.

Mon Aug 28 13:45:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Svc_Conf_Lexer.cpp:
          Fixed variable not used warning when ACE_USES_WCHAR is not
          defined

        * ace/Min_Max.h:
          Removed ACE_LACKS_MIN_MAX_TEMPLATES and the code that was
          there when this define was set, this define wasn't enabled
          in any configuration file.

Mon Aug 28 11:53:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/taodefaults.mpb:
          Added exceptions as base project, TAO requires native C++ exceptions.

Mon Aug 28 11:45:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * protocols/tests/RMCast/RMCast.mpc:
          Removed avoids usage, that is already in the base projects

Mon Aug 28 11:13:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/*.doxygen:
          Set ignore prefix in several files to improve generated
          documentation

Mon Aug 28 11:08:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/acexml.doxygen:
          Ignore ACEXML_ as prefix

Mon Aug 28 10:34:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/run_test.txt:
          Updated to explain how the script works on VxWorks and extended
          the exampl in such a way that if there is not an executable
          it returns directly
